# ai-tts

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.json  docker-compose.test.yml  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  uninstall.ps1  uninstall.sh
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: test.yml
claude/: settings.hooks.snippet.json
claude/hooks/: tts-state.ps1  tts-stop.ps1
claude/rules/: voice-tts.md
claude/skills/tts/: SKILL.md
docs/: DEPRECATED_POWERSHELL.md  architecture.md  daemon.md  platforms.md  testing.md  voices.md
examples/: manual-smoke.ps1
grok/hooks/: tts-state.ps1  tts-stop.ps1  tts.json.template
grok/rules/: voice-tts.md
grok/skills/tts/: SKILL.md
scripts/: daemon-start.ps1  daemon-stop.ps1  run-tests.ps1  run-tests.sh  smoke.ps1  smoke.sh
src/: common.ps1  daemon.ps1  speak-core.ps1  speak.ps1
src/python/: README.md
src/python/ai_tts/: __init__.py  __main__.py  cli_config.py  client.py  config.py  daemon_server.py  doctor.py  hooks.py  install_ui.py  markers.py  play.py  speak.py  tts_rest.py  tts_stream.py  uninstall.py  voices.py  wavutil.py
tests/: conftest.py  test_cli.py  test_cli_config_status.py  test_config.py  test_daemon_tcp.py  test_doctor.py  test_hooks.py  test_install_ui.py  test_live_optional.py  test_markers.py  test_play.py  test_repo_layout.py  test_speak.py  test_tts_rest.py  test_tts_stream.py  test_uninstall.py  test_wavutil.py
