[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tts"
version = "0.2.0"
description = "Portable xAI TTS for Grok Build and Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []
optional-dependencies = { stream = ["websockets>=12.0"] }

[project.scripts]
ai-tts = "ai_tts.__main__:main"

[tool.setuptools.packages.find]
where = ["src/python"]
